# goit_python_web_hw_11

./: fake_data.ipynb  main.py  pyproject.toml
schemas/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: schemas.py
